[refactor] #275 toList 코드 간소화